--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "longip",
+  "name": "ip_address_to_integer_components",
   "version": "1.0.0",
-  "description": "A simple, zero-dependency, package for creating long ip addresses along with long versions of the IP's broadcast and network addresses.",
+  "description": "A simple, zero-dependency, JavaScript class for converting IP addresses to integer versions of their network address components (the IP address, broadcast address, and network address).",
   "main": "./IpAddressToIntegerComponents.js",
   "scripts": {
     "test": "node ./IpAddressToIntegerComponents.test.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/damonholden/longip.git"
+    "url": "git+https://github.com/damonholden/ip_address_to_integer_components.git"
   },
   "keywords": [
     "ip"
@@ -16,7 +16,7 @@
   "author": "damonholden",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/damonholden/longip/issues"
+    "url": "https://github.com/damonholden/ip_address_to_integer_components/issues"
   },
-  "homepage": "https://github.com/damonholden/longip#readme"
+  "homepage": "https://github.com/damonholden/ip_address_to_integer_components#readme"
 }
